--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
             <button class="subscribe">S’abonner</button>
         </div>
     </section>
+
+    <section class="dashboard">
+        <h2>Créer un Plan 2D</h2>
+        <canvas id="planCanvas"></canvas>
+        <button id="savePlan">Sauvegarder</button>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
